--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "polished": "^3.6.5",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
+    "react-hook-form": "^6.4.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-reanimated": "^1.13.0",
