--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "prettier/prettier": "error",
     "camelcase": "off",
     "react/style-prop-object": "off",
+    "react/require-default-props": "off",
     "react/jsx-filename-extension": ["off", { "extensions": [".js", ".jsx"] }],
     "@typescript-eslint/explicit-function-return-type": "off",
     "react/jsx-props-no-spreading": "off",
