--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-screens": "^2.10.1",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
+    "socket.io-client": "^2.3.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
