--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-native-vector-icons": "^6.4.5",
+    "@types/socket.io-client": "^1.4.33",
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.9.0",
     "@typescript-eslint/parser": "^3.9.0",
