--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/node": "^14.6.0",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-native-vector-icons": "^6.4.5",
