--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
     "splash": {
-      "image": "./src/assets/splash.jpg",
+      "image": "./src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#574B5D"
     },
