Updates on project (#2)
* Add socket

* Update Header

* Add AuthContext

* Add index to components

* Update Join and Login

* Update imports

* Add Auth and Public Routes

* Refactor Components and Pages

* rotaLoginDone

* a

* achoqueResolvioProblema

* LoginRouteDone

* resolviAsRotas

* splashScreen

* Updates

* Update App

* Add Axios interceptor

* Update Button

* Update Container padding

* Update FormContianer

* Update input component

* Add Link Component

* Update contexts

* Update ChatRoom

* Update Join and Login

* end

* Updates

* config

* WIP chatRoom conversation

* Updates and fizes

* change splash to png type

* Update Header

* Update Input

* Remove React.FC from files

Co-authored-by: Gustavo <gustavosohne38@gmail.com>

--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#574B5D"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
